--- a/index.htm
+++ b/index.htm
@@ -1,14 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Tiki - Mua hàng online giá tốt, hàng chuẩn, ship nhanh</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-    <h1>Hello</h1>
+    <div class="app">
+        <!-- Begin Header -->
+        <header class="header">
+            <!-- Begin Header-top -->
+            <div class="app__container">
+                <div class="header__top d-flex align-items-center">
+                    <div class="header__logo-and-search d-flex align-items-center">
+                        <div class="header__logo-menu">
+                            <a href="/" class="header__logo">
+                                <img class="header__logo-img"
+                                    src="https://salt.tikicdn.com/ts/upload/ae/f5/15/2228f38cf84d1b8451bb49e2c4537081.png"
+                                    alt="tiki-logo">
+                            </a>
+                        </div>
+                        <div class="header__search">
+                            <form action="" id="search-form" class="header__search-form d-flex">
+                                <input type="text" class="header__search-input border-0"
+                                    placeholder="Tìm sản phẩm, danh mục hay thương hiệu mong muốn ...">
+                                <button
+                                    class="header__search-button d-flex align-items-center justify-content-center outline-0 border-0">
+                                    <img class="header__search-icon"
+                                        src="https://salt.tikicdn.com/ts/upload/ed/5e/b8/8538366274240326978318348ea8af7c.png">Tìm
+                                    Kiếm
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="header__auth-and-cart d-flex align-items-center justify-content-end">
+                        <div class="header__auth d-flex align-items-center">
+                            <img class="header__profile-icon"
+                                src="https://salt.tikicdn.com/ts/upload/67/de/1e/90e54b0a7a59948dd910ba50954c702e.png">
+                            <div class="header__auth-info d-flex flex-column">
+                                <span class="header__auth-action">Đăng nhập / Đăng ký</span>
+                                <span class="header__auth-account">
+                                    Tài khoản
+                                    <img class="header__auth-account--menu-icon"
+                                        src="https://salt.tikicdn.com/ts/upload/d7/d4/a8/34939af2da1ceeeae9f95b7485784233.png">
+                                </span>
+                            </div>
+                        </div>
+                        <div class="header__cart">
+                            <a href="/" class="header__cart-link">
+                                <div class="header__cart-link--content d-flex align-items-end">
+                                    <div class="header__cart-wrapper d-flex">
+                                        <img class="header__cart-icon"
+                                            src="https://salt.tikicdn.com/ts/upload/40/44/6c/b80ad73e5e84aeb71c08e5d8d438eaa1.png">
+                                        <span class="header__cart-number">0</span>
+                                    </div>
+                                    <span class="header__cart-text">Giỏ hàng</span>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Header-top -->
+            <!-- Begin Header-bottom -->
+            <div class="app__container">
+                <div class="header__bottom d-flex justify-content-between">
+                    <div class="header__bottom-info d-flex position-relative">
+                        <a href="/" class="header__bottom-freeship--link">
+                            <img class="header__bottom-freeship--img position-absolute top-0"
+                                src="https://salt.tikicdn.com/ts/upload/e5/1d/22/61ff572362f08ead7f34ce410a4a6f96.png"
+                                alt="free-ship-badge">
+                        </a>
+                        <ul class="header__bottom-quicklink--list d-flex align-items-start">
+                            <!-- Render in index.js -->
+                        </ul>
+                    </div>
+                    <div class="header__bottom-sell">
+                        <a href="/" class="header__bottom-sell--link d-flex align-items-center">
+                            <img class="header__bottom-sell--icon"
+                                src="https://frontend.tikicdn.com/_desktop-next/static/img/icon-seller.svg">
+                            <span class="header__bottom-sell--text">Bán hàng cùng Tiki</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- End Header-bottom -->
+        </header>
+        <!-- End Header -->
+        <div class="content">
+
+        </div>
+        <footer class="footer"></footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
     <script src="./assets/js/index.js"></script>
 </body>
+
 </html>
