update link images and icons

--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@
                         <div class="header__logo-menu">
                             <a href="/" class="header__logo">
                                 <img class="header__logo-img"
-                                    src="https://salt.tikicdn.com/ts/upload/ae/f5/15/2228f38cf84d1b8451bb49e2c4537081.png"
+                                    src="./assets/images/Tiki-Logo.png"
                                     alt="tiki-logo">
                             </a>
                         </div>
@@ -33,7 +33,7 @@
                                 <button
                                     class="header__search-button d-flex align-items-center justify-content-center outline-0 border-0">
                                     <img class="header__search-icon"
-                                        src="https://salt.tikicdn.com/ts/upload/ed/5e/b8/8538366274240326978318348ea8af7c.png">Tìm
+                                        src="./assets/images/Search-Icon.png">Tìm
                                     Kiếm
                                 </button>
                             </form>
@@ -42,7 +42,7 @@
                     <div class="header__auth-and-cart d-flex align-items-center justify-content-end">
                         <div class="header__auth d-flex align-items-center">
                             <img class="header__profile-icon"
-                                src="https://salt.tikicdn.com/ts/upload/67/de/1e/90e54b0a7a59948dd910ba50954c702e.png">
+                                src="./assets/images/Profile-Icon.png">
                             <div class="header__auth-info d-flex flex-column">
                                 <span class="header__auth-action">Đăng nhập / Đăng ký</span>
                                 <span class="header__auth-account">
@@ -57,7 +57,7 @@
                                 <div class="header__cart-link--content d-flex align-items-end">
                                     <div class="header__cart-wrapper d-flex">
                                         <img class="header__cart-icon"
-                                            src="https://salt.tikicdn.com/ts/upload/40/44/6c/b80ad73e5e84aeb71c08e5d8d438eaa1.png">
+                                            src="./assets/images/Cart-Icon.png">
                                         <span class="header__cart-number">0</span>
                                     </div>
                                     <span class="header__cart-text">Giỏ hàng</span>
@@ -93,9 +93,9 @@
             <!-- End Header-bottom -->
         </header>
         <!-- End Header -->
-        <div class="content">
+        <main class="content">
 
-        </div>
+        </main>
         <footer class="footer"></footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
