--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,9 @@
     <title>Tiki - Mua hàng online giá tốt, hàng chuẩn, ship nhanh</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+        integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -21,9 +24,7 @@
                     <div class="header__logo-and-search d-flex align-items-center">
                         <div class="header__logo-menu">
                             <a href="/" class="header__logo">
-                                <img class="header__logo-img"
-                                    src="./assets/images/Tiki-Logo.png"
-                                    alt="tiki-logo">
+                                <img class="header__logo-img" src="./assets/images/header/Tiki-Logo.png" alt="tiki-logo">
                             </a>
                         </div>
                         <div class="header__search">
@@ -32,8 +33,7 @@
                                     placeholder="Tìm sản phẩm, danh mục hay thương hiệu mong muốn ...">
                                 <button
                                     class="header__search-button d-flex align-items-center justify-content-center outline-0 border-0">
-                                    <img class="header__search-icon"
-                                        src="./assets/images/Search-Icon.png">Tìm
+                                    <img class="header__search-icon" src="./assets/images/header/Search-Icon.png">Tìm
                                     Kiếm
                                 </button>
                             </form>
@@ -41,8 +41,7 @@
                     </div>
                     <div class="header__auth-and-cart d-flex align-items-center justify-content-end">
                         <div class="header__auth d-flex align-items-center">
-                            <img class="header__profile-icon"
-                                src="./assets/images/Profile-Icon.png">
+                            <img class="header__profile-icon" src="./assets/images/header/Profile-Icon.png">
                             <div class="header__auth-info d-flex flex-column">
                                 <span class="header__auth-action">Đăng nhập / Đăng ký</span>
                                 <span class="header__auth-account">
@@ -56,8 +55,7 @@
                             <a href="/" class="header__cart-link">
                                 <div class="header__cart-link--content d-flex align-items-end">
                                     <div class="header__cart-wrapper d-flex">
-                                        <img class="header__cart-icon"
-                                            src="./assets/images/Cart-Icon.png">
+                                        <img class="header__cart-icon" src="./assets/images/header/Cart-Icon.png">
                                         <span class="header__cart-number">0</span>
                                     </div>
                                     <span class="header__cart-text">Giỏ hàng</span>
@@ -93,9 +91,76 @@
             <!-- End Header-bottom -->
         </header>
         <!-- End Header -->
-        <main class="content">
 
+        <!-- Begin Content -->
+        <main class="content">
+            <!-- Begin Categories Slider -->
+            <div class="content__categories d-flex align-items-center justify-content-between">
+                <span class="content__categories-icon--wrapper icon-prev d-none">
+                    <i class="content__categories-icon fa-solid fa-chevron-left"></i>
+                </span>
+                <ul class="content__categories-list d-flex align-items-center">
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Thịt, Rau củ</a>
+                    </li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Bách Hoá</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Nhà cửa</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Điện tử</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Thiết bị số</a>
+                    </li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Điện Thoại</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Mẹ & Bé</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Làm Đẹp</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Gia Dụng</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Thời trang nữ</a>
+                    </li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Thời trang nam</a>
+                    </li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Giày nữ</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Túi nữ</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Giày nam</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Túi nam</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Balo & Vali</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Phụ kiện</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Đồng hồ</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Laptop</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Quốc Tế</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Voucher</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Sách</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Thể Thao</a></li>
+                    <li class="content__categories-item">
+                        <a href="" class="content__categories-link">Máy Ảnh</a></li>
+                </ul>
+                <span class="content__categories-icon--wrapper icon-next">
+                    <i class="content__categories-icon fa-solid fa-chevron-right"></i>
+                </span>
+            </div>
+            <!-- End Categories Slider -->
         </main>
+        <!-- End Content -->
+
         <footer class="footer"></footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
