fix slider categories & add advertisement images

--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,8 @@
                     <div class="header__logo-and-search d-flex align-items-center">
                         <div class="header__logo-menu">
                             <a href="/" class="header__logo">
-                                <img class="header__logo-img" src="./assets/images/header/Tiki-Logo.png" alt="tiki-logo">
+                                <img class="header__logo-img" src="./assets/images/header/Tiki-Logo.png"
+                                    alt="tiki-logo">
                             </a>
                         </div>
                         <div class="header__search">
@@ -95,69 +96,38 @@
         <!-- Begin Content -->
         <main class="content">
             <!-- Begin Categories Slider -->
-            <div class="content__categories d-flex align-items-center justify-content-between">
-                <span class="content__categories-icon--wrapper icon-prev d-none">
-                    <i class="content__categories-icon fa-solid fa-chevron-left"></i>
-                </span>
-                <ul class="content__categories-list d-flex align-items-center">
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Thịt, Rau củ</a>
-                    </li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Bách Hoá</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Nhà cửa</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Điện tử</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Thiết bị số</a>
-                    </li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Điện Thoại</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Mẹ & Bé</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Làm Đẹp</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Gia Dụng</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Thời trang nữ</a>
-                    </li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Thời trang nam</a>
-                    </li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Giày nữ</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Túi nữ</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Giày nam</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Túi nam</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Balo & Vali</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Phụ kiện</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Đồng hồ</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Laptop</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Quốc Tế</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Voucher</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Sách</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Thể Thao</a></li>
-                    <li class="content__categories-item">
-                        <a href="" class="content__categories-link">Máy Ảnh</a></li>
-                </ul>
-                <span class="content__categories-icon--wrapper icon-next">
-                    <i class="content__categories-icon fa-solid fa-chevron-right"></i>
-                </span>
+            <div class="content__categories-wrapper">
+                <div class="content__categories">
+                    
+                    <span class="content__categories-icon--wrapper icon-prev d-none">
+                        <i class="content__categories-icon d-block fa-solid fa-chevron-left"></i>
+                    </span>
+                    <ul class="content__categories-list d-inline-block">
+                        <!-- Render list in index.js -->
+                    </ul>
+
+                    <span class="content__categories-icon--wrapper icon-next">
+                        <i class="content__categories-icon d-block fa-solid fa-chevron-right"></i>
+                    </span>
+                </div>
             </div>
             <!-- End Categories Slider -->
+
+            <!-- Begin Advertisement Slider -->
+            <div class="app__container">
+                <div class="content__advertisement">
+                    <div class="content__advertisement-slider">
+                        <ul class="content__advertisement-slider-list">
+
+                        </ul>
+                    </div>
+
+                    <div class="advertisement-image">
+
+                    </div>
+                </div>
+            </div>
+            <!-- End Advertisement Slider -->
         </main>
         <!-- End Content -->
 
