complete ui slider advertisement

--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
                 <div class="header__top d-flex align-items-center">
                     <div class="header__logo-and-search d-flex align-items-center">
                         <div class="header__logo-menu">
-                            <a href="/" class="header__logo">
+                            <a href="" class="header__logo">
                                 <img class="header__logo-img" src="./assets/images/header/Tiki-Logo.png"
                                     alt="tiki-logo">
                             </a>
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                         <div class="header__cart">
-                            <a href="/" class="header__cart-link">
+                            <a href="" class="header__cart-link">
                                 <div class="header__cart-link--content d-flex align-items-end">
                                     <div class="header__cart-wrapper d-flex">
                                         <img class="header__cart-icon" src="./assets/images/header/Cart-Icon.png">
@@ -71,7 +71,7 @@
             <div class="app__container">
                 <div class="header__bottom d-flex justify-content-between">
                     <div class="header__bottom-info d-flex position-relative">
-                        <a href="/" class="header__bottom-freeship--link">
+                        <a href="" class="header__bottom-freeship--link">
                             <img class="header__bottom-freeship--img position-absolute top-0"
                                 src="https://salt.tikicdn.com/ts/upload/e5/1d/22/61ff572362f08ead7f34ce410a4a6f96.png"
                                 alt="free-ship-badge">
@@ -81,7 +81,7 @@
                         </ul>
                     </div>
                     <div class="header__bottom-sell">
-                        <a href="/" class="header__bottom-sell--link d-flex align-items-center">
+                        <a href="" class="header__bottom-sell--link d-flex align-items-center">
                             <img class="header__bottom-sell--icon"
                                 src="https://frontend.tikicdn.com/_desktop-next/static/img/icon-seller.svg">
                             <span class="header__bottom-sell--text">Bán hàng cùng Tiki</span>
@@ -98,7 +98,6 @@
             <!-- Begin Categories Slider -->
             <div class="content__categories-wrapper">
                 <div class="content__categories">
-                    
                     <span class="content__categories-icon--wrapper icon-prev d-none">
                         <i class="content__categories-icon d-block fa-solid fa-chevron-left"></i>
                     </span>
@@ -115,15 +114,79 @@
 
             <!-- Begin Advertisement Slider -->
             <div class="app__container">
-                <div class="content__advertisement">
+                <div class="content__advertisement d-flex justify-content-between">
                     <div class="content__advertisement-slider">
-                        <ul class="content__advertisement-slider-list">
-
+                        <div class="content__advertisement-slider--btn prev-btn">
+                            <img class="content__advertisement-slider--icon"
+                                src="https://salt.tikicdn.com/ts/upload/6b/59/c2/b61db5f1c32cfdc6d75e59d4fac2dbe8.png">
+                        </div>
+                        <ul class="content__advertisement-slider--list d-flex">
+                            <li class="content__advertisement-slider--item">
+                                <a href="" class="content__advertisement-slider--link">
+                                    <img src="./assets/images/slider/slider1.webp" alt="Slider1">
+                                </a>
+                            </li>
+                            <li class="content__advertisement-slider--item">
+                                <a href="" class="content__advertisement-slider--link">
+                                    <img src="./assets/images/slider/slider2.webp" alt="Slider2">
+                                </a>
+                            </li>
+                            <li class="content__advertisement-slider--item">
+                                <a href="" class="content__advertisement-slider--link">
+                                    <img src="./assets/images/slider/slider3.webp" alt="Slider3">
+                                </a>
+                            </li>
+                            <li class="content__advertisement-slider--item">
+                                <a href="" class="content__advertisement-slider--link">
+                                    <img src="./assets/images/slider/slider4.webp" alt="Slider4">
+                                </a>
+                            </li>
+                            <li class="content__advertisement-slider--item">
+                                <a href="" class="content__advertisement-slider--link">
+                                    <img src="./assets/images/slider/slider5.webp" alt="Slider5">
+                                </a>
+                            </li>
+                            <li class="content__advertisement-slider--item">
+                                <a href="" class="content__advertisement-slider--link">
+                                    <img src="./assets/images/slider/slider6.webp" alt="Slider6">
+                                </a>
+                            </li>
+                            <li class="content__advertisement-slider--item">
+                                <a href="" class="content__advertisement-slider--link">
+                                    <img src="./assets/images/slider/slider7.webp" alt="Slider7">
+                                </a>
+                            </li>
+                            <li class="content__advertisement-slider--item">
+                                <a href="" class="content__advertisement-slider--link">
+                                    <img src="./assets/images/slider/slider8.webp" alt="Slider8">
+                                </a>
+                            </li>
+                            <li class="content__advertisement-slider--item">
+                                <a href="" class="content__advertisement-slider--link">
+                                    <img src="./assets/images/slider/slider9.webp" alt="Slider9">
+                                </a>
+                            </li>
+                            <li class="content__advertisement-slider--item">
+                                <a href="" class="content__advertisement-slider--link">
+                                    <img src="./assets/images/slider/slider10.webp" alt="Slider10">
+                                </a>
+                            </li>
+                            <li class="content__advertisement-slider--item">
+                                <a href="" class="content__advertisement-slider--link">
+                                    <img src="./assets/images/slider/slider11.webp" alt="Slider11">
+                                </a>
+                            </li>
                         </ul>
+                        <div class="content__advertisement-slider--btn next-btn">
+                            <img class="content__advertisement-slider--icon"
+                                src="https://salt.tikicdn.com/ts/upload/6b/59/c2/b61db5f1c32cfdc6d75e59d4fac2dbe8.png">
+                        </div>
                     </div>
 
-                    <div class="advertisement-image">
-
+                    <div class="content__advertisement-image">
+                        <a href="" class="content__advertisement-link">
+                            <img src="./assets/images/slider/advertisement.webp" alt="Advertisement">
+                        </a>
                     </div>
                 </div>
             </div>
