build logic advertisement slider

--- a/index.html
+++ b/index.html
@@ -115,72 +115,32 @@
             <!-- Begin Advertisement Slider -->
             <div class="app__container">
                 <div class="content__advertisement d-flex justify-content-between">
-                    <div class="content__advertisement-slider">
-                        <div class="content__advertisement-slider--btn prev-btn">
+                    <div class="content__advertisement-slider position-relative">
+                        <div class="content__advertisement-slider--btn prev-btn position-absolute start-0 top-50 translate-middle-y">
                             <img class="content__advertisement-slider--icon"
                                 src="https://salt.tikicdn.com/ts/upload/6b/59/c2/b61db5f1c32cfdc6d75e59d4fac2dbe8.png">
                         </div>
                         <ul class="content__advertisement-slider--list d-flex">
-                            <li class="content__advertisement-slider--item">
-                                <a href="" class="content__advertisement-slider--link">
-                                    <img src="./assets/images/slider/slider1.webp" alt="Slider1">
-                                </a>
-                            </li>
-                            <li class="content__advertisement-slider--item">
-                                <a href="" class="content__advertisement-slider--link">
-                                    <img src="./assets/images/slider/slider2.webp" alt="Slider2">
-                                </a>
-                            </li>
-                            <li class="content__advertisement-slider--item">
-                                <a href="" class="content__advertisement-slider--link">
-                                    <img src="./assets/images/slider/slider3.webp" alt="Slider3">
-                                </a>
-                            </li>
-                            <li class="content__advertisement-slider--item">
-                                <a href="" class="content__advertisement-slider--link">
-                                    <img src="./assets/images/slider/slider4.webp" alt="Slider4">
-                                </a>
-                            </li>
-                            <li class="content__advertisement-slider--item">
-                                <a href="" class="content__advertisement-slider--link">
-                                    <img src="./assets/images/slider/slider5.webp" alt="Slider5">
-                                </a>
-                            </li>
-                            <li class="content__advertisement-slider--item">
-                                <a href="" class="content__advertisement-slider--link">
-                                    <img src="./assets/images/slider/slider6.webp" alt="Slider6">
-                                </a>
-                            </li>
-                            <li class="content__advertisement-slider--item">
-                                <a href="" class="content__advertisement-slider--link">
-                                    <img src="./assets/images/slider/slider7.webp" alt="Slider7">
-                                </a>
-                            </li>
-                            <li class="content__advertisement-slider--item">
-                                <a href="" class="content__advertisement-slider--link">
-                                    <img src="./assets/images/slider/slider8.webp" alt="Slider8">
-                                </a>
-                            </li>
-                            <li class="content__advertisement-slider--item">
-                                <a href="" class="content__advertisement-slider--link">
-                                    <img src="./assets/images/slider/slider9.webp" alt="Slider9">
-                                </a>
-                            </li>
-                            <li class="content__advertisement-slider--item">
-                                <a href="" class="content__advertisement-slider--link">
-                                    <img src="./assets/images/slider/slider10.webp" alt="Slider10">
-                                </a>
-                            </li>
-                            <li class="content__advertisement-slider--item">
-                                <a href="" class="content__advertisement-slider--link">
-                                    <img src="./assets/images/slider/slider11.webp" alt="Slider11">
-                                </a>
-                            </li>
+                            <!-- Render in index.js -->
                         </ul>
-                        <div class="content__advertisement-slider--btn next-btn">
+                        <div class="content__advertisement-slider--btn next-btn position-absolute top-50 end-0 translate-middle-y">
                             <img class="content__advertisement-slider--icon"
                                 src="https://salt.tikicdn.com/ts/upload/6b/59/c2/b61db5f1c32cfdc6d75e59d4fac2dbe8.png">
                         </div>
+
+                        <ul class="content__advertisement-slider--dot-list d-flex justify-content-center position-absolute">
+                            <!-- <li class="content__advertisement-slider--dot-item active rounded-circle">1</li>
+                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
+                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
+                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
+                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
+                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
+                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
+                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
+                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
+                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
+                            <li class="content__advertisement-slider--dot-item rounded-circle"></li> -->
+                        </ul>
                     </div>
 
                     <div class="content__advertisement-image">
