--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+        integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/header/header.css">
+    <link rel="stylesheet" href="./assets/css/content/content.css">
+    <link rel="stylesheet" href="./assets/css/content/categories.css">
+    <link rel="stylesheet" href="./assets/css/content/advertisementSlider.css">
 </head>
 
 <body>
@@ -77,7 +84,7 @@
                                 alt="free-ship-badge">
                         </a>
                         <ul class="header__bottom-quicklink--list d-flex align-items-start">
-                            <!-- Render in index.js -->
+                            <!-- Render in categories.js -->
                         </ul>
                     </div>
                     <div class="header__bottom-sell">
@@ -102,7 +109,7 @@
                         <i class="content__categories-icon d-block fa-solid fa-chevron-left"></i>
                     </span>
                     <ul class="content__categories-list d-inline-block">
-                        <!-- Render list in index.js -->
+                        <!-- Render list in categories.js -->
                     </ul>
 
                     <span class="content__categories-icon--wrapper icon-next">
@@ -116,30 +123,15 @@
             <div class="app__container">
                 <div class="content__advertisement d-flex justify-content-between">
                     <div class="content__advertisement-slider position-relative">
-                        <div class="content__advertisement-slider--btn prev-btn position-absolute start-0 top-50 translate-middle-y">
-                            <img class="content__advertisement-slider--icon"
-                                src="https://salt.tikicdn.com/ts/upload/6b/59/c2/b61db5f1c32cfdc6d75e59d4fac2dbe8.png">
-                        </div>
+                        <!-- Button left in slick function advertisementSlider.js-->
                         <ul class="content__advertisement-slider--list d-flex">
-                            <!-- Render in index.js -->
+                            <!-- Render in advertisementSlider.js -->
                         </ul>
-                        <div class="content__advertisement-slider--btn next-btn position-absolute top-50 end-0 translate-middle-y">
-                            <img class="content__advertisement-slider--icon"
-                                src="https://salt.tikicdn.com/ts/upload/6b/59/c2/b61db5f1c32cfdc6d75e59d4fac2dbe8.png">
-                        </div>
+                        <!-- Button right in slick function advertisementSlider.js-->
 
-                        <ul class="content__advertisement-slider--dot-list d-flex justify-content-center position-absolute">
-                            <!-- <li class="content__advertisement-slider--dot-item active rounded-circle">1</li>
-                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
-                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
-                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
-                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
-                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
-                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
-                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
-                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
-                            <li class="content__advertisement-slider--dot-item rounded-circle"></li>
-                            <li class="content__advertisement-slider--dot-item rounded-circle"></li> -->
+                        <ul
+                            class="content__advertisement-slider--dot-list d-flex justify-content-center position-absolute">
+                            <!-- Dot items in slick function advertisementSlider.js -->
                         </ul>
                     </div>
 
@@ -159,7 +151,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-    <script src="./assets/js/index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+        integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./assets/js/header/header.js"></script>
+    <script src="./assets/js/content/categories.js"></script>
+    <script src="./assets/js/content/advertisementSlider.js"></script>
 </body>
 
 </html>
