fix ui slider beside flash deal

--- a/index.html
+++ b/index.html
@@ -176,8 +176,10 @@
                     <div class="content__advertisement-price--slider-wrapper position-relative">
                         <div class="content__advertisement-price--slider">
                             <div class="content__advertisement-price--slider-image">
-                                <img src="./assets/images/advertisementPrice/advertisementPriceSlider.webp"
-                                    alt="AdPrice">
+                                <a href="#">
+                                    <img src="./assets/images/advertisementPrice/advertisementPriceSlider.webp"
+                                        alt="AdPrice">
+                                </a>
                             </div>
                             <div class="content__advertisement-price--slider-video position-relative">
                                 <video poster="./assets/images/advertisementPrice/posterVideo.png">
