--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                         src="./assets/images/advertisementPrice/play-icon.png" alt="Play">
                                 </div>
                                 <div class="content__advertisement-price--slider-video__sound-btn rounded-circle position-absolute">
-                                    <img src="./assets/images/advertisementPrice/mute-sound-icon.png" alt="Sound">
+                                    <img class="position-absolute top-50 start-50 translate-middle" src="./assets/images/advertisementPrice/mute-sound-icon.png" alt="Sound">
                                 </div>
                             </div>
                         </div>
